2014-11-13  Paul Eggert  <eggert@cs.ucla.edu>

	Avoid undefined behavior in color table hashing.
	* image.c (CT_HASH_RGB) [COLOR_TABLE_SUPPORT]: Remove, replacing with ...
	(ct_hash_rgb) [COLOR_TABLE_SUPPORT]: New function.  All uses changed.
	This function avoids undefined behavior with signed shift overflow.

2014-11-10  Eli Zaretskii  <eliz@gnu.org>

	* fileio.c (Finsert_file_contents): Invalidate buffer caches also
	when the inserted text does not need decoding.  (Bug#18982)

2014-11-10  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (EmacsScroller): judge returns bool.

	* nsterm.m (ns_set_vertical_scroll_bar): Release bar.
	(ns_judge_scroll_bars): Only set removed if judge returns true.
	(judge): Returns bool == condemned.  Remove self from window.
	(setPosition:portion:whole:): Remove raise SIGIO (Bug#18757).

2014-11-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (command_loop_1): Record this-command in recent-keys.
	(Frecent_keys): Rewrite. and add optional `include-cmds' arg.

2014-11-09  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (ns_set_vertical_scroll_bar)
	(ns_set_horizontal_scroll_bar): Cleanup merge error.

2014-11-09  Paul Eggert  <eggert@cs.ucla.edu>

	* xgselect.c (xg_select): Don't assume n_gfds is nonnegative
	merely because tmo_in_millisec is nonnegative.  The 1st call
	to g_main_context_query could succeed while the 2nd one fails.

	* frame.c (Fcan_run_window_configuration_change_hook): Return a value.

2014-11-08  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (run): Only use non-system event loop if OSX version is
	exactly 10.9 (Bug#18993).
	(ns_set_vertical_scroll_bar): Don't call bar setPosition: unless
	needed (Bug#18757).

2014-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* callproc.c (encode_current_directory): Support handling of file
	names prepended by "/:".  (Bug#18891)

2014-11-08  Alan Mackenzie  <acm@muc.de>

	* syntax.c (back_comment): Fix off-by-one error (bug#18022).
