@@ -1,3 +1,9 @@
+2014-11-14  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	* xfont.c (xfont_list_pattern): Do not allocate font entity object
+	for each candidate font but attempt to reuse it from previous improper
+	candidate, if any.
+
 2014-11-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Avoid undefined behavior in color table hashing.
@@ -237,7 +243,7 @@
 	functions in Vselection_converter_alist (Bug#18911).
 	(syms_of_nsselect): Remove Vselection_converter_alist.
 
-(2014-10-31  Dmitry Antipov  <dmantipov@yandex.ru>
+2014-10-31  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* font.c (copy_font_spec): Redesign to avoid Fcopy_alist
 	and unnecessary initialization.  Adjust comments.
